--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "bb_recorder" "\0"
+            VALUE "FileDescription", "brecorder" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "bb_recorder" "\0"
+            VALUE "InternalName", "brecorder" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "bb_recorder.exe" "\0"
-            VALUE "ProductName", "bb_recorder" "\0"
+            VALUE "OriginalFilename", "brecorder.exe" "\0"
+            VALUE "ProductName", "brecorder" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
