--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,11 @@ dependencies:
   equatable: ^2.0.3
   shared_preferences: ^2.0.15
   # dartz: ^0.10.1
-  path_provider: ^2.0.11
-  logging: ^1.0.2
   path: ^1.8.1
+  path_provider: ^2.0.11
+  # logging: ^1.0.2
+  # logger: ^1.1.0
+  # stack_trace: ^1.10.0
 
 
 dev_dependencies:
