--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -66,6 +67,14 @@ flutter {
     source '../..'
 }
 
+def exoplayer_version="2.18.1"
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation 'com.google.android.exoplayer:exoplayer-core:$exoplayer_version'
+//    implementation "com.google.android.exoplayer:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+//    implementation "com.google.android.exoplayer:exoplayer-dash:$exoplayer_version"
+//    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+
+    implementation "androidx.multidex:multidex:2.0.1"
 }
