--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.1'
+//        classpath 'com.google.android.exoplayer:2.18.1'
     }
 }
 
