--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   # logging: ^1.0.2
   # logger: ^1.1.0
   # stack_trace: ^1.10.0
+  # audioplayers: ^1.0.1
+
 
 
 dev_dependencies:
