--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,6 @@
     "dart.flutterSdkPath": "/Volumes/Data/Dev/Software/flutter_sdk/flutter_sdk_mac",
     "svn.ignoreMissingSvnWarning": true,
     "editor.fontSize": 12,
-    "terminal.integrated.fontFamily": "MS Gothic",
-    "terminal.integrated.fontSize": 12,
-    "debug.console.fontFamily": "MS Gothic",
-    "debug.console.fontSize": 12
+    "terminal.integrated.fontFamily": "",
+    "terminal.integrated.fontSize": 12
 }
