--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Recording</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Flutter debuging</string>
 </dict>
 </plist>
