--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   # audioplayers: ^1.0.1
   intl: ^0.17.0
   collection: ^1.16.0
-
+  flutter_slidable: ^2.0.0
+  dependencies:
+  share_plus: ^6.0.0
+  cross_file: ^0.3.3+2
 
 
 dev_dependencies:
