--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,16 @@ dependencies:
   # stack_trace: ^1.10.0
   # audioplayers: ^1.0.1
   intl: ^0.17.0
-  # collection: ^1.17.0
   flutter_slidable: ^2.0.0
   share_plus: ^6.0.0
   cross_file: ^0.3.3+2
   firebase_core: ^2.0.0
   googleapis: ^9.2.0
   google_sign_in: ^5.4.2
+
+  #bRecorder's dependencies depend on following, so not specifying version here
+  collection: any
+  http: any
 
 
 dev_dependencies:
