--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: brecorder
-description: A new Flutter project.
-
+description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -12,13 +11,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
+# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# In Windows, build-name is used as the major, minor, and patch parts
+# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
 
   #added by bjn
   get_it: ^7.2.0
@@ -46,18 +47,17 @@ dependencies:
   # logger: ^1.1.0
   # stack_trace: ^1.10.0
   # audioplayers: ^1.0.1
-  intl: ^0.17.0
-  flutter_slidable: ^2.0.0
-  share_plus: ^6.0.0
+  intl: ^0.19.0
+  flutter_slidable: ^3.1.0
+  # share_plus: ^8.0.3
   cross_file: ^0.3.3+2
   firebase_core: ^2.0.0
-  googleapis: ^9.2.0
-  google_sign_in: ^5.4.2
+  googleapis: ^13.1.0
+  google_sign_in: ^6.2.1
 
   #bRecorder's dependencies depend on following, so not specifying version here
   collection: any
-  http: any
-
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +68,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
+  flutter_lints: ^3.0.0
   # added by bjn
   mockito: ^5.2.0
   # change_app_package_name: ^1.1.0
